--- a/index.html
+++ b/index.html
@@ -61,63 +61,114 @@
 <!-- ===================== MAIN ===================== -->
 <main>
 
-  <!-- HERO (with carousel media on the right) -->
-  <section class="hero reveal" id="top">
-    <div class="hero-grid">
-      <div>
-        <h1>
-          From “this doesn’t exist” to “no one makes this.”<br>
-          <strong>Bring us the problem — you leave with something that fits and works.</strong>
-        </h1>
-
-        <p>
-         We design, develop and build custom products, hardware, and components. That might be a mount that doesn’t exist yet,
-          a housing for equipment, a tray / canopy solution for a 4x4, a short-run assembly, or something that has to work around what’s already there.
-        </p>
-
-        <p>
-         We manufacture a lot in-house. If a job needs laser cutting, folding, machining, wiring, 3D printing, or any other process we don’t run in-house,
-          we bring in the right fabricator and make sure they’re working to clear intent.
-        </p>
-
-        <div class="cta-row">
-          <a class="btn filled" href="#services">What we do</a>
-          <a class="btn" href="#contact">Ask if we can make it</a>
-        </div>
-      </div>
-
-      <!-- HERO CAROUSEL MEDIA -->
-      <div class="hero-media">
-        <div class="hero-slider" id="heroSlider">
-          <!-- slide 1 -->
-          <div class="hero-slide is-active" data-bg="assets/img/hero/hero-01.jpg">
-            <div class="hero-slide-overlay">
-              <p class="hero-slide-tag">Concept → CAD → Manufacture</p>
-              <h3 class="hero-slide-title">Rozsa Design</h3>
-              <p class="hero-slide-sub">Industrial design & custom fabrication</p>
+   <!-- HERO CAROUSEL -->
+  <section class="hero-shell reveal" id="top">
+    <div class="hero-carousel" id="heroCarousel">
+      <!-- SLIDE 1 -->
+      <article class="hero-slide is-active">
+        <div class="hero-grid">
+          <div>
+            <p class="hero-tag">Industrial / product / fabrication</p>
+            <h1>
+              From “this doesn’t exist” to “no one makes this.”<br>
+              <strong>Bring us the problem — you leave with something that fits and works.</strong>
+            </h1>
+            <p>
+              We design, develop and build custom products, hardware, and components. That might be a mount that doesn’t exist yet,
+              a housing for equipment, a tray / canopy solution for a 4x4, a short-run assembly, or something that has to work around what’s already there.
+            </p>
+            <p>
+              We manufacture a lot in-house. If a job needs laser cutting, folding, machining, wiring, 3D printing, or any other process we don’t run in-house,
+              we bring in the right fabricator and make sure they’re working to clear intent.
+            </p>
+            <div class="cta-row">
+              <a class="btn filled" href="#services">What we do</a>
+              <a class="btn" href="#contact">Ask if we can make it</a>
             </div>
           </div>
-          <!-- slide 2 -->
-          <div class="hero-slide" data-bg="assets/img/hero/hero-02.jpg">
-            <div class="hero-slide-overlay">
-              <p class="hero-slide-tag">4x4 / Trays / Canopies</p>
-              <h3 class="hero-slide-title">Hardware that actually fits</h3>
-              <p class="hero-slide-sub">Designed around real vehicles, not catalog photos</p>
-            </div>
-          </div>
-          <!-- slide 3 -->
-          <div class="hero-slide" data-bg="assets/img/hero/hero-03.jpg">
-            <div class="hero-slide-overlay">
-              <p class="hero-slide-tag">Short-run & one-off</p>
-              <h3 class="hero-slide-title">Weird problems welcome</h3>
-              <p class="hero-slide-sub">“No one makes this” — that’s the point</p>
+
+          <div class="hero-media">
+            <div class="hero-media-plate" data-bg="assets/img/hero/hero-01.jpg">
+              <div class="hero-media-overlay">
+                <p class="hero-media-label">Concept → CAD → Manufacture</p>
+                <p class="hero-media-sub">Rozsa Design</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="hero-dots" id="heroDots" aria-label="Hero carousel navigation"></div>
-      </div>
+      </article>
+
+      <!-- SLIDE 2 -->
+      <article class="hero-slide">
+        <div class="hero-grid">
+          <div>
+            <p class="hero-tag">4x4 / trays / canopies</p>
+            <h1>
+              Vehicle hardware that actually fits.<br>
+              <strong>Tray, canopy, mounts, storage — built around how you use it.</strong>
+            </h1>
+            <p>
+              We design brackets, mounts, 4x4 hardware and internal organisation to suit real utes and real installs — not catalog photos.
+              Sheet-metal, folded parts, gusseted brackets and 3D printed test parts all supported.
+            </p>
+            <p>
+              If it needs a folded or laser job you can’t run yourself, we can line it up and pass you finished parts.
+            </p>
+            <div class="cta-row">
+              <a class="btn filled" href="#useful">See where we're useful</a>
+              <a class="btn" href="#contact">Book an on-site look</a>
+            </div>
+          </div>
+
+          <div class="hero-media">
+            <div class="hero-media-plate" data-bg="assets/img/hero/hero-02.jpg">
+              <div class="hero-media-overlay">
+                <p class="hero-media-label">4x4 / workshop / site</p>
+                <p class="hero-media-sub">Tray & canopy integration</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <!-- SLIDE 3 -->
+      <article class="hero-slide">
+        <div class="hero-grid">
+          <div>
+            <p class="hero-tag">One-off / low volume / NDA</p>
+            <h1>
+              Weird problems are welcome.<br>
+              <strong>“We just need one done properly.” That’s us.</strong>
+            </h1>
+            <p>
+              Short-run enclosures, panels, brackets, controlled drawings, supplier quote checks, and integration/packaging work.
+              We can work under NDA and feed revision-controlled documentation into your system.
+            </p>
+            <p>
+              You get something buildable — with the right notes to hand to a fabricator.
+            </p>
+            <div class="cta-row">
+              <a class="btn filled" href="#process">How it works</a>
+              <a class="btn" href="#contact">Send an enquiry</a>
+            </div>
+          </div>
+
+          <div class="hero-media">
+            <div class="hero-media-plate" data-bg="assets/img/hero/hero-03.jpg">
+              <div class="hero-media-overlay">
+                <p class="hero-media-label">Industrial / commercial</p>
+                <p class="hero-media-sub">Revision-controlled docs</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
     </div>
+
+    <!-- dots -->
+    <div class="hero-dots-bar" id="heroCarouselDots" aria-label="Hero slides"></div>
   </section>
+
 
   <!-- SERVICES -->
   <section id="services" class="reveal">
@@ -444,3 +495,4 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
