--- a/index.html
+++ b/index.html
@@ -61,26 +61,28 @@
 <!-- ===================== MAIN ===================== -->
 <main>
 
-   <!-- HERO CAROUSEL -->
+  <!-- HERO CAROUSEL -->
   <section class="hero-shell reveal" id="top">
     <div class="hero-carousel" id="heroCarousel">
       <!-- SLIDE 1 -->
       <article class="hero-slide is-active">
         <div class="hero-grid">
-          <div>
+          <div class="hero-copy">
             <p class="hero-tag">Industrial / product / fabrication</p>
             <h1>
               From “this doesn’t exist” to “no one makes this.”<br>
               <strong>Bring us the problem — you leave with something that fits and works.</strong>
             </h1>
-            <p>
-              We design, develop and build custom products, hardware, and components. That might be a mount that doesn’t exist yet,
-              a housing for equipment, a tray / canopy solution for a 4x4, a short-run assembly, or something that has to work around what’s already there.
-            </p>
-            <p>
-              We manufacture a lot in-house. If a job needs laser cutting, folding, machining, wiring, 3D printing, or any other process we don’t run in-house,
-              we bring in the right fabricator and make sure they’re working to clear intent.
-            </p>
+            <div class="hero-text">
+              <p>
+                We design, develop and build custom products, hardware, and components. That might be a mount that doesn’t exist yet,
+                a housing for equipment, a tray / canopy solution for a 4x4, a short-run assembly, or something that has to work around what’s already there.
+              </p>
+              <p>
+                We manufacture a lot in-house. If a job needs laser cutting, folding, machining, wiring, 3D printing, or any other process we don’t run in-house,
+                we bring in the right fabricator and make sure they’re working to clear intent.
+              </p>
+            </div>
             <div class="cta-row">
               <a class="btn filled" href="#services">What we do</a>
               <a class="btn" href="#contact">Ask if we can make it</a>
@@ -101,19 +103,21 @@
       <!-- SLIDE 2 -->
       <article class="hero-slide">
         <div class="hero-grid">
-          <div>
+          <div class="hero-copy">
             <p class="hero-tag">4x4 / trays / canopies</p>
             <h1>
               Vehicle hardware that actually fits.<br>
               <strong>Tray, canopy, mounts, storage — built around how you use it.</strong>
             </h1>
-            <p>
-              We design brackets, mounts, 4x4 hardware and internal organisation to suit real utes and real installs — not catalog photos.
-              Sheet-metal, folded parts, gusseted brackets and 3D printed test parts all supported.
-            </p>
-            <p>
-              If it needs a folded or laser job you can’t run yourself, we can line it up and pass you finished parts.
-            </p>
+            <div class="hero-text">
+              <p>
+                We design brackets, mounts, 4x4 hardware and internal organisation to suit real utes and real installs — not catalog photos.
+                Sheet-metal, folded parts, gusseted brackets and 3D printed test parts all supported.
+              </p>
+              <p>
+                If it needs a folded or laser job you can’t run yourself, we can line it up and pass you finished parts.
+              </p>
+            </div>
             <div class="cta-row">
               <a class="btn filled" href="#useful">See where we're useful</a>
               <a class="btn" href="#contact">Book an on-site look</a>
@@ -134,19 +138,21 @@
       <!-- SLIDE 3 -->
       <article class="hero-slide">
         <div class="hero-grid">
-          <div>
+          <div class="hero-copy">
             <p class="hero-tag">One-off / low volume / NDA</p>
             <h1>
               Weird problems are welcome.<br>
               <strong>“We just need one done properly.” That’s us.</strong>
             </h1>
-            <p>
-              Short-run enclosures, panels, brackets, controlled drawings, supplier quote checks, and integration/packaging work.
-              We can work under NDA and feed revision-controlled documentation into your system.
-            </p>
-            <p>
-              You get something buildable — with the right notes to hand to a fabricator.
-            </p>
+            <div class="hero-text">
+              <p>
+                Short-run enclosures, panels, brackets, controlled drawings, supplier quote checks, and integration/packaging work.
+                We can work under NDA and feed revision-controlled documentation into your system.
+              </p>
+              <p>
+                You get something buildable — with the right notes to hand to a fabricator.
+              </p>
+            </div>
             <div class="cta-row">
               <a class="btn filled" href="#process">How it works</a>
               <a class="btn" href="#contact">Send an enquiry</a>
@@ -168,6 +174,7 @@
     <!-- dots -->
     <div class="hero-dots-bar" id="heroCarouselDots" aria-label="Hero slides"></div>
   </section>
+
 
 
   <!-- SERVICES -->
@@ -495,4 +502,5 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
