--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
     </div>
 
     <!-- dots -->
-    <div class="hero-dots-bar" id="heroCarouselDots" aria-label="Hero slides"></div>
+<div class="hero-progress" id="heroProgress" aria-label="Hero progress">
+  <div class="hero-progress-fill" id="heroProgressFill"></div>
+  <!-- optional tick marks; JS will add these automatically -->
+</div>
   </section>
 
 
@@ -507,6 +510,7 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
